added password login feature
