# docs/swagger.json
@@ -9,6 +9,64 @@
     "host": "localhost:3000",
     "basePath": "/api/v1",
     "paths": {
+        "/login": {
+            "post": {
+                "description": "Login user by either of email or phone and password",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Login",
+                "parameters": [
+                    {
+                        "description": "Login User JSON",
+                        "name": "login",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/http.loginUser"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/http.response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/domain.JWTToken"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/http.response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/http.response"
+                        }
+                    }
+                }
+            }
+        },
         "/send-otp": {
             "post": {
                 "description": "Sends OTP to the number if its registered",
@@ -304,6 +362,9 @@
                 "last_name": {
                     "type": "string"
                 },
+                "password": {
+                    "type": "string"
+                },
                 "phone_number": {
                     "type": "string"
                 },
@@ -342,6 +403,31 @@
                 },
                 "reason": {
                     "type": "string"
+                }
+            }
+        },
+        "http.loginUser": {
+            "type": "object",
+            "required": [
+                "password"
+            ],
+            "oneOf":{
+                "required": ["email"],
+                "required": ["phone_number"]
+            },
+            "properties": {
+                "email": {
+                    "type": "string",
+                    "example": "example@example.com"
+                },
+                "password": {
+                    "type": "string",
+                    "example": "password"
+                },
+                "phone_number": {
+                    "type": "string",
+                    "minLength": 10,
+                    "example": "9876543210"
                 }
             }
         },
@@ -421,7 +507,8 @@
                     "type": "string"
                 },
                 "phone_number": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "9876543210"
                 }
             }
         }
